[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "applecrate"
authors = [{ name = "Rhet Turnbull", email = "rturnbull+git@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]
dependencies = [
    "Jinja2>=3.1.3",
    "click>=8.1.7",
    "markdown2>=2.4.12",
    "toml>=0.10.2",
]

[project.optional-dependencies]
dev = [
    "bump2version>=1.0.1,<2.0.0",
    "cogapp>=3.3.0,<4.0.0",
    "mypy>=1.8.0",
    "types-toml",
]
lint = ["ruff>=0.1.14"]
test = ["pytest>=7.4.2", "pytest-cov", "mypy>=1.8.0"]
docs = [
    "mkdocs>=1.4.2",
    "mkdocs-material>=9.0.13",
    "mkdocstrings-python>=0.8.3",
]

[project.urls]
Home = "https://github.com/RhetTbull/applecrate"
Issues = "https://github.com/RhetTbull/applecrate/issues"
Source = "https://github.com/RhetTbull/applecrate"

[project.scripts]
applecrate = "applecrate.cli:cli"

[tool.flit.sdist]
exclude = ["site/**/*", "tests/**/*"]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 130
